# ginja-ai-assesment

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAIMS_SYSTEM.md  Dockerfile  PRODUCTION.md  README.md  coverage.xml  docker-compose.yml  ginja_ai_postman_collection.json  main.py  postman_collection.json  pyproject.toml  test_debug.py  test_routes.py
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 02a23ab579d8_add_authentication_fields_to_user_model.py  4780b697d142_add_is_superuser_to_user_model.py  47cc29ee2ba8_description.py  70f1b241413b_description.py  772323349127_description.py  b2ca32d08927_add_claims_management_system.py  c83e9a328da5_description.py
app/: config.py  database.py  enums.py  main.py  middleware.py  routers.py
app/crud/auth/: user.py  verification.py
app/crud/claims/: __init__.py  claim.py
app/models/: __init__.py  claim.py  diagnosis.py  member.py  procedure.py  provider.py  token.py  user.py
app/routers/: health.py
app/schemas/auth/: user_schemas.py  verification.py
app/schemas/claims/: __init__.py  claim_schemas.py
app/utils/: auth_helpers.py  claim_validator.py  create_update_delete.py  security.py
app/views/: health.py
app/views/auth/: users.py  verification.py
app/views/claims/: __init__.py  claims.py
guides/: AZURE_GUIDE.md  CLAIMS_SYSTEM.md
tests/: conftest.py
tests/integration/auth/: test_verification_routes.py
tests/integration/claims/: test_claims.py
tests/integration/users/: test_user_routes.py
tests/unit/auth/: test_auth_helpers.py
tests/unit/claims/: test_claim_crud.py  test_claim_validator.py
tests/unit/users/: test_user_model.py
