[project]
name = "ginja-ai"
version = "0.1.0"
description = "Ginja AI — Production FastAPI application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
ginja-ai = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
